@@ -122,6 +122,9 @@ RELEASE 0.09 -
   - Allow the File() and Dir() methods to take a path-name string as
     the starting directory, in addition to a Dir object.
 
+  - Allow the command handler to be selected via the SPAWN, SHELL
+    and ESCAPE construction variables.
+
   From sam th:
 
   - Dynamically check for the existence of utilities with which to
